# AART

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
aart/: __init__.py  aart.py  data.py  losses.py  metrics.py
configs/: aart_resunet_128.json
scripts/: infer_aart.py  train_aart.py
tests/: test_aart.py
