[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aart-net"
version = "0.1.0"
description = "Anatomy-aligned radial-tangential convolution for LGE-CMR scar segmentation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.1"
]

[tool.setuptools.packages.find]
include = ["aart*"]
